# Milestone-2

./: AlgorithmSearchable.cpp  AlgorithmSearchable.h  AlgorithmSolver.h  Astar test.txt  Astar.h  BFS test.txt  BFS.h  BestFirstSearch test.txt  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  Cell.h  ClientHandler.h  CompareCost.h  DFS test.txt  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  Searchable.h  Searcher.h  Server.h  SolveProblem.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  ToStringProblem.h  github.xml  gitlog.txt  main.cpp  matrices.txt  (+1 more)
unique Files/: 4192288287439524688  6621152168140672647  6681434226763868238  7640347531746834470  problemData
